2017-10-05 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 11:0:8.
	* Incremented the package version to 0.15.0.
2017-10-23 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyLwrpClient::clipAlarmActive()' method.
	* Added a 'SyLwrpClient::silenceAlarmActive()' method.
2017-10-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 12:0:9.
	* Incremented the package version to 0.16.0.
2017-11-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyProfile::unusedLines()' method.
2017-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 13:0:10.
	* Incremented the package version to 0.17.0.
2018-02-26 Fred Gleason <fredg@paravelsystems.com>
	* Changed package licensing to LGPLv2.
2018-02-26 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'README'.
	* Updated 'INSTALL'.
	* Updated 'NEWS'.
	* Incremented the package version to 0.17.1.
2018-03-08 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'symetertest' to use peak values only in the meters.
2018-03-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'SyLwrpClient' class that caused corrupt
	GPIO source address values to be returned.
2018-03-30 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SyEndpoint::exists()' and 'SyEndpoint::setExists()'
	methods.
2018-03-30 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'NEWS'.
	* Incremented the library ABI version to 14:0:11.
	* Updated the package version to 0.18.0.
2018-04-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'SyGpioServer' that caused 'gpiReceived()' and
	'gpioReceived()' signals to be omitted when processing multicast
	updates containing multiple bit events.
2018-04-24 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library ABI version to 14:1:11.
	* Updated the package version to 0.18.1.
2018-09-21 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'SyGpioServer::gpioEvent(SyGpioBundleEvent *)' signal.